PersonalDevOrg/force-app/main/default/objects/Professional_Follow_up__c/Professional_Follow_up__c.object-meta.xml
<CustomObject>
    <label>Professional Follow up</label>
    <nameField>
        <label>Professional Follow up Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Professional Follow ups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>