PersonalDevOrg/force-app/main/default/objects/Professional_Follow_up__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Professional Follow ups</relationshipLabel>
    <relationshipName>Professional_Follow_ups</relationshipName>
    <type>Lookup</type>
</CustomField>