PersonalDevOrg/force-app/main/default/objects/Professional_Follow_up__c/fields/Candidate__c.field-meta.xml
<CustomField>
    <fullName>Candidate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Candidate</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Professional Follow ups</relationshipLabel>
    <relationshipName>Professional_Follow_ups</relationshipName>
    <type>Lookup</type>
</CustomField>